--- a/.github/workflows/alh-central-comp.yml
+++ b/.github/workflows/alh-central-comp.yml
@@ -18,7 +18,7 @@ jobs:
     name: Determine target env central-comp
     runs-on: ubuntu-latest
     outputs:
-      environment_matrix: ${{ steps.target-comp.outputs.environment_matrix }}
+      environment_matrix: ${{ steps.environment.outputs.environment_matrix }}
       opco: ${{ env.OP_CO }}
     steps:
       - uses: actions/checkout@v4
