--- a/.github/workflows/alh-central-comp.yml
+++ b/.github/workflows/alh-central-comp.yml
@@ -27,21 +27,15 @@ jobs:
         uses: ./.github/actions/environment
         with:
           opcopath: ${{ env.OP_CO }}
-  # check-output:
-  #   runs-on: ubuntu-latest
-  #   needs: detect-components
-  #   steps:
-  #     - name: Output
-  #       run: |
-  #         echo "Environment Matrix: ${{ needs.detect-components.outputs.environment_matrix }}"
-  #         echo "OPCO: ${{ needs.detect-components.outputs.opco }}"
+
   call-mad-flow:
     uses: vickydevopsorg/mad-core/.github/workflows/terraform.yml@main
     secrets: inherit
     needs: detect-components
     strategy:
       matrix:
-        environment: ${{ fromJson(needs.detect-components.outputs.environment_matrix) }}
+#        environment: ${{ fromJson(needs.detect-components.outputs.environment_matrix) }}
+        environment: ["nonprd"]
     with:
       environment: ${{ matrix.environment }}
       deployment_target: "central-comp"
