--- a/.github/workflows/alh-central-comp.yml
+++ b/.github/workflows/alh-central-comp.yml
@@ -1,6 +1,10 @@
 name: Mad Central-Components for ALH
 on:
   pull_request:
+    types:
+      - opened
+      - ready_for_review
+      
     branches:
       - main
     paths:
